fixed bug causing settings menu to not fit into viewport

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -6,7 +6,7 @@
   max-width: var(--max-width);
   margin: 0 auto 1em auto;
   color: var(--clr-bg);
-  z-index: 999;
+  z-index: 800;
   position: relative;
 }
 
