--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -18,7 +18,7 @@
   border: none;
   padding: 0.1em;
   background-color: var(--clr-primary);
-  margin-right: clamp(2rem, 5vw, 2.5rem);
+  margin-right: clamp(1.2rem, 7vw, 2.5rem);
   transition: transform 100ms linear, opacity 250ms linear;
   overflow: visible;
   &:hover {
@@ -51,6 +51,6 @@
 }
 
 .footer-help {
-  font-size: clamp(1em, 4vw, 1.7em);
+  font-size: clamp(1.4em, 4vw, 1.7em);
   color: var(--clr-primary);
 }
