--- a/src/scss/_select-notes-modal.scss
+++ b/src/scss/_select-notes-modal.scss
@@ -1,5 +1,5 @@
 .select-notes-modal {
-  z-index: 300;
+  z-index: 900;
   position: absolute;
   width: 18.5rem;
   max-width: 70%;
